# social-agent

./: .gitignore  PRODUCT_SUMMARY.md  README.md  README_SETUP.md  config.py  main.py  pyproject.toml  run_agent.py  run_twitter_integration_test.py  scheduler.py  setup.py  social_media_agent.py  storage.py
.devcontainer/: Dockerfile
agents/: __init__.py  action_agent.py  kernel_agent.py  search_agent.py  supervisor.py  thread_agent.py
kernel/: __init__.py  decider.py  ranker.py
models/: __init__.py  adapters.py
sources/: __init__.py  tweepy_client.py  x_client.py
sources/test/: test_tweetpy_client.py
